--- a/app/src/main/res/layout/item_container_recieved_message.xml
+++ b/app/src/main/res/layout/item_container_recieved_message.xml
@@ -23,14 +23,17 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/background_recieved_message"
-        android:padding="@dimen/_12sdp"
+        android:paddingStart="@dimen/_12sdp"
+        android:paddingTop="@dimen/_8sdp"
+        android:paddingEnd="@dimen/_12sdp"
+        android:paddingBottom="@dimen/_8sdp"
         android:textColor="@color/white"
         android:textSize="@dimen/_13ssp"
+        android:layout_marginStart="@dimen/_4sdp"
         app:layout_constraintStart_toEndOf="@id/imageProfile"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_max="wrap"
         app:layout_constraintWidth_percent="0.75" />
-
 
     <TextView
         android:id="@+id/reaction"
@@ -47,8 +50,6 @@
         android:layout_marginTop="@dimen/_4sdp"
         android:textColor="@color/secondaryText"
         android:textSize="@dimen/_8ssp"
-        android:layout_marginStart="@dimen/_2sdp"
-        android:layout_marginEnd="@dimen/_4sdp"
         app:layout_constraintStart_toStartOf="@id/textmessage"
         app:layout_constraintTop_toBottomOf="@+id/textmessage"
         />
