--- a/app/src/main/res/layout/activity_reciever_info.xml
+++ b/app/src/main/res/layout/activity_reciever_info.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/_5sdp"
-    tools:context=".Reciever_info">
+    tools:context=".Receiver_info">
 
     <ImageView
         android:id="@+id/rProfile_image"
