--- a/app/src/main/res/layout/item_container_user.xml
+++ b/app/src/main/res/layout/item_container_user.xml
@@ -9,7 +9,7 @@
         android:layout_width="@dimen/_35sdp"
         android:layout_height="@dimen/_35sdp"
         android:id="@+id/imageProfile"
-        android:background="@drawable/backgroundimage"
+        android:src="@drawable/backgroundimage"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
