--- a/app/src/main/res/layout/item_container_sent_message.xml
+++ b/app/src/main/res/layout/item_container_sent_message.xml
@@ -9,6 +9,7 @@
 
     <TextView
         android:id="@+id/textmessage"
+        android:autoLink="all"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/background_sent_message"
