--- a/app/src/main/res/layout/activity_reciever_info.xml
+++ b/app/src/main/res/layout/activity_reciever_info.xml
@@ -10,20 +10,19 @@
     <ImageView
         android:id="@+id/rProfile_image"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="wrap_content" />
+
     <TextView
         android:id="@+id/textname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/rProfile_image"
-        app:layout_constraintWidth_max="wrap"
-        />
+        app:layout_constraintWidth_max="wrap" />
+
     <TextView
         android:id="@+id/textOnline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textname"
-        />
+        android:layout_below="@+id/textname" />
 
 </RelativeLayout>
