--- a/app/src/main/res/layout/custom_dialog_reaction.xml
+++ b/app/src/main/res/layout/custom_dialog_reaction.xml
@@ -1,78 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="@dimen/_20ssp"
-    app:cardElevation="@dimen/_20ssp"
     android:layout_gravity="center"
-    >
+    app:cardCornerRadius="@dimen/_20ssp"
+    app:cardElevation="@dimen/_20ssp">
 
     <LinearLayout
+        android:id="@+id/reaction"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/_5sdp"
         android:orientation="horizontal"
-        android:id="@+id/reaction"
-        android:textColorHint="@color/secondaryText"
-        >
+        android:padding="@dimen/_5sdp"
+        android:textColorHint="@color/secondaryText">
 
         <ImageView
             android:id="@+id/iv_like"
-            android:layout_weight="1"
-            android:layout_margin="@dimen/_3sdp"
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_25sdp"
-            android:src="@drawable/ic_like"
-            />
+            android:layout_margin="@dimen/_3sdp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_like" />
+
         <ImageView
             android:id="@+id/iv_heart"
-            android:layout_weight="1"
-            android:layout_margin="@dimen/_3sdp"
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_25sdp"
-            android:src="@drawable/ic_heart_like"
-            />
+            android:layout_margin="@dimen/_3sdp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_heart_like" />
+
         <ImageView
             android:id="@+id/iv_wow"
-            android:layout_weight="1"
-            android:layout_margin="@dimen/_3sdp"
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_25sdp"
-            android:src="@drawable/ic_wow"
-            />
+            android:layout_margin="@dimen/_3sdp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_wow" />
+
         <ImageView
             android:id="@+id/iv_haha"
-            android:layout_weight="1"
-            android:layout_margin="@dimen/_3sdp"
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_25sdp"
-            android:src="@drawable/ic_haha"
-            />
+            android:layout_margin="@dimen/_3sdp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_haha" />
+
         <ImageView
             android:id="@+id/iv_sad"
-            android:layout_weight="1"
-            android:layout_margin="@dimen/_3sdp"
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_25sdp"
-            android:src="@drawable/ic_sad"
-            />
+            android:layout_margin="@dimen/_3sdp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_sad" />
+
         <ImageView
             android:id="@+id/iv_angry"
-            android:layout_weight="1"
-            android:layout_margin="@dimen/_3sdp"
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_25sdp"
-            android:src="@drawable/ic_angry"
-            />
+            android:layout_margin="@dimen/_3sdp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_angry" />
+
         <ImageView
             android:id="@+id/iv_add"
-            android:layout_weight="1"
-            android:layout_margin="@dimen/_3sdp"
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_25sdp"
-            android:src="@drawable/add"
-            />
+            android:layout_margin="@dimen/_3sdp"
+            android:layout_weight="1"
+            android:src="@drawable/add" />
 
     </LinearLayout>
 
