--- a/app/src/main/res/layout/intro_3.xml
+++ b/app/src/main/res/layout/intro_3.xml
@@ -1,52 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:background="#ffffff"
-    >
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:gravity="center"
         android:layout_weight="1"
-        android:orientation="vertical"
-        >
+        android:gravity="center"
+        android:orientation="vertical">
+
         <ImageView
             android:layout_width="@dimen/_180sdp"
             android:layout_height="@dimen/_200sdp"
-            android:background="@drawable/ic_privacy"
             android:layout_gravity="center"
-            />
+            android:background="@drawable/ic_privacy" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:gravity="center"
         android:layout_weight="1"
-        android:orientation="vertical"
-        >
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="End to End Encryption"
-            android:gravity="center"
-            android:textSize="@dimen/_18ssp"
-            android:textColor="#000000"
-            android:textStyle="bold"
-            />
+        android:gravity="center"
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Data Privacy &amp; Security"
             android:gravity="center"
-            android:textSize="@dimen/_14ssp"
-            />
+            android:text="End to End Encryption"
+            android:textColor="#000000"
+            android:textSize="@dimen/_18ssp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Data Privacy &amp; Security"
+            android:textSize="@dimen/_14ssp" />
 
     </LinearLayout>
 
