--- a/app/src/main/res/layout/item_container_recent_conversion.xml
+++ b/app/src/main/res/layout/item_container_recent_conversion.xml
@@ -1,33 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/_8sdp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:padding="@dimen/_8sdp">
 
     <com.makeramen.roundedimageview.RoundedImageView
+        android:id="@+id/imageProfile"
         android:layout_width="@dimen/_35sdp"
         android:layout_height="@dimen/_35sdp"
-        android:id="@+id/imageProfile"
         android:background="@drawable/backgroundimage"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:riv_oval="true"
-        />
+        app:riv_oval="true" />
+
     <View
         android:id="@+id/viewsupp"
         android:layout_width="1dp"
         android:layout_height="1dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageProfile"
         app:layout_constraintStart_toEndOf="@+id/imageProfile"
-        app:layout_constraintTop_toTopOf="@+id/imageProfile"
-        />
+        app:layout_constraintTop_toTopOf="@+id/imageProfile" />
 
     <TextView
+        android:id="@+id/txtname"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:id="@+id/txtname"
         android:layout_marginStart="@dimen/_8sdp"
         android:layout_marginEnd="@dimen/_8sdp"
         android:ellipsize="end"
@@ -36,22 +35,20 @@
         android:textSize="@dimen/_15ssp"
         app:layout_constraintBottom_toTopOf="@+id/viewsupp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageProfile"
-        />
+        app:layout_constraintStart_toEndOf="@+id/imageProfile" />
 
     <TextView
+        android:id="@+id/textRecentMessage"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:id="@+id/textRecentMessage"
         android:layout_marginStart="@dimen/_8sdp"
         android:layout_marginEnd="@dimen/_8sdp"
         android:ellipsize="end"
         android:maxLines="1"
         android:textColor="@color/secondaryText"
         android:textSize="@dimen/_12ssp"
-        app:layout_constraintTop_toBottomOf="@+id/viewsupp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageProfile"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/viewsupp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
