--- a/app/src/main/res/layout/item_container_sent_message.xml
+++ b/app/src/main/res/layout/item_container_sent_message.xml
@@ -1,29 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="@dimen/_8sdp"
     android:padding="@dimen/_4sdp">
 
     <TextView
         android:id="@+id/textmessage"
-        android:autoLink="all"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:autoLink="all"
         android:background="@drawable/background_sent_message"
         android:paddingStart="@dimen/_12sdp"
         android:paddingTop="@dimen/_8sdp"
         android:paddingEnd="@dimen/_12sdp"
         android:paddingBottom="@dimen/_8sdp"
-        app:layout_constraintWidth_max="wrap"
         android:textColor="@color/white"
         android:textSize="@dimen/_13ssp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.8"
-        />
+        app:layout_constraintWidth_max="wrap"
+        app:layout_constraintWidth_percent="0.8" />
 
     <TextView
         android:id="@+id/reaction"
@@ -42,16 +41,15 @@
         android:textColor="@color/secondaryText"
         android:textSize="@dimen/_8ssp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textmessage"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/textmessage" />
 
-<!--    <TextView-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Seen"-->
-<!--        android:id="@+id/txtSeen"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/textmessage"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintEnd_toStartOf="@id/textdateTime"-->
-<!--        />-->
+    <!--    <TextView-->
+    <!--        android:layout_width="0dp"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:text="Seen"-->
+    <!--        android:id="@+id/txtSeen"-->
+    <!--        app:layout_constraintTop_toBottomOf="@id/textmessage"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintEnd_toStartOf="@id/textdateTime"-->
+    <!--        />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
